keyboard: Drop "Left Alt" as compose key option
One of the compose key options in Settings -> Keyboard (actually the first one in the list) is "Left Alt". However, that option does not exist in XKB:
$ cat /usr/share/X11/xkb/rules/evdev.lst | grep compose:
compose:ralt Right Alt
compose:lwin Left Win
compose:lwin-altgr 3rd level of Left Win
compose:rwin Right Win
compose:rwin-altgr 3rd level of Right Win
compose:menu Menu
compose:menu-altgr 3rd level of Menu
compose:lctrl Left Ctrl
compose:lctrl-altgr 3rd level of Left Ctrl
compose:rctrl Right Ctrl
compose:rctrl-altgr 3rd level of Right Ctrl
compose:caps Caps Lock
compose:caps-altgr 3rd level of Caps Lock
compose:102 The "< >" key
compose:102-altgr 3rd level of the "< >" key
compose:paus Pause
compose:ins Insert
compose:prsc PrtSc
compose:sclk Scroll Lock
Consequently, if you select "Left Alt" as your compose key, it won't work, so that option should be dropped.