keyboard: Drop "Left Alt" as compose key option

Fixes https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2509